--- a/index.html
+++ b/index.html
@@ -715,6 +715,8 @@
 
     <!-- Main Scripts -->
     <script src="js/glitche-scripts.min.js"></script>
+    <script async defer data-domain="web.dash.itsezsid.com" src="https://analytics.dash.itsezsid.com/js/plausible.js"></script>
+
 
 
 </body>
