--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 
     <!-- Main Scripts -->
     <script src="js/glitche-scripts.min.js"></script>
-    <script async defer data-domain="web.dash.itsezsid.com" src="https://analytics.dash.itsezsid.com/js/plausible.js"></script>
+    <script async defer data-domain="itsezsid.com" src="https://analytics.dash.itsezsid.com/js/plausible.js"></script>
 
 
 
