--- a/index.html
+++ b/index.html
@@ -715,8 +715,7 @@
 
     <!-- Main Scripts -->
     <script src="js/glitche-scripts.min.js"></script>
-    <script async defer data-domain="itsezsid.com" src="https://analytics.dash.itsezsid.com/js/plausible.js"></script>
-
+    <script src="//code.tidio.co/kjzzy8uvbfmt5hwvj9bexpk73wutr1xh.js" async></script>
 
 
 </body>
